swapped out Oracle/Sun Base64 encoder